--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "Unlicense",
   "dependencies": {
     "chalk": "^2.3.2",
-    "figlet": "^1.2.0"
+    "figlet": "^1.2.0",
+    "fs": "0.0.1-security"
   }
 }
