--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "chalk": "^2.3.2",
     "figlet": "^1.2.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "sequelize": "^4.35.5",
+    "sqlite3": "^3.1.13"
   }
 }
