--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^2.3.2",
     "figlet": "^1.2.0",
     "fs": "0.0.1-security",
+    "net": "^1.0.2",
     "sequelize": "^4.35.5",
     "sqlite3": "^3.1.13"
   }
